--- a/index.html
+++ b/index.html
@@ -1,6 +1,30 @@
 <Html>
 <head>
 <title>预言Github主页</title>
+	<!-- Le styles -->
+<link href="css/bootstrap-combined.min.css" rel="stylesheet">
+<link href="css/layoutit.css" rel="stylesheet">
+
+<!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+<!--[if lt IE 9]>
+		<script src="js/html5shiv.js"></script>
+	<![endif]-->
+
+	<!-- Fav and touch icons -->
+	<link rel="shortcut icon" href="img/favicon.png">
+	
+	<script type="text/javascript" src="js/jquery-2.0.0.min.js"></script>
+	<!--[if lt IE 9]>
+	<script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+	<![endif]-->
+	<script type="text/javascript" src="js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="js/jquery-ui.js"></script>
+	<script type="text/javascript" src="js/jquery.ui.touch-punch.min.js"></script>
+<script type="text/javascript" src="js/jquery.htmlClean.js"></script>
+<script type="text/javascript" src="ckeditor/ckeditor.js"></script>
+<script type="text/javascript" src="ckeditor/config.js"></script>
+<script type="text/javascript" src="js/scripts.js"></script>
+	
 </head>
 <body>
 <h2>个人主页展示</h2>
