加入样式表

--- a/index.html
+++ b/index.html
@@ -2,13 +2,20 @@
 <html>
 	<head>
 		<title>预言在Github上的个人主页</title>
+		<style type="text/css">
+			div {
+				background-color:green
+			}
+		</style>
 	</head>
 	<body>
 		<h1>项目链接</h1>
 		<br/>
 		<hr style="color:'blue'"/>
-		<a href='https://gtyuyan.github.io/test'><h4>test项目</h4></a>
-		<a href='https://starrysky.gnrok.cc/ssh_crm/index.html'><h4>网上书城项目</h4></a>
+		<div>
+			<a href='https://gtyuyan.github.io/test'><h4>test项目</h4></a>
+			<a href='https://starrysky.gnrok.cc/ssh_crm/index.html'><h4>网上书城项目</h4></a>
+		</div>
 	
 	</body>
 	
