--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 				background-color:green
 			}
 		</style>
-		<link ref="stylesheet" type="text/css" href="mystylesheet"/>
+		<link ref="stylesheet" type="text/css" href="mystylesheet.css"/>
 	</head>
 	<body>
 		<h1>项目链接</h1>
